--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="#">其他</a>
                 </li>
                 <li class="nav-item bitem">
-                    <a class="nav-link" href="#">注册</a>
+                    <a class="nav-link" href="html/login.html">注册</a>
                 </li>
                 <li class="nav-item bitem">
                     <a class="nav-link" href="html/update.html">上传</a>
