--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>源站</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 
 <body>
     <div class="header">
-        <nav class="navbar navbar-expand-sm justify-content-center bg-light navbar-light fixed-top">
+        <nav class="navbar">
             <ul class="navbar-nav">
                 <li class="nav-item bitem">
                     <a class="nav-link" href="#">首页</a>
@@ -33,6 +31,24 @@
 
         </nav>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="container- row">
         <div class="left col-sm-3">
             <div class="card " style="background-color: var(--bs-red);">
