更新 旋转动画和阴影

--- a/index.html
+++ b/index.html
@@ -51,15 +51,21 @@
     </div>
     <div class="content">
         <div class="container2">
-            <div class="left bgshadow">
+            <div class="left bgshadow bg-br">
                 <div class="card ">
-                    <img 
-                        src="https://cdn.jsdelivr.net/gh/removeif/removeif-demo@latest/img/avatar.png" alt="辣椒の酱"
-                        ">
+                    <div class="card-img">
+                        <img class="avatar"
+                            src="https://cdn.jsdelivr.net/gh/removeif/removeif-demo@latest/img/avatar.png">
+                    </div>
+                </div>
+                <div class=" card-body"">
+                    <p class=" pp" style="font-size: large;">源站の酱</p>
+                    <p class="pp" style="font-size:13px">尚未执佩剑，转眼即江湖</p>
+                    <p class="pp" style="font-size: 13px;"><span>阿尔及利亚</span></p>
                 </div>
             </div>
-            <div class="center bgshadow">s</div>
-            <div class="right bgshadow">s</div>
+            <div class="center bgshadow bg-br">s</div>
+            <div class="right bgshadow bg-br">s</div>
         </div>
     </div>
     <div class="footer"></div>
