update about mobile phone 适配

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div class="navbar">
                 <ul class="navbar-nav">
                     <li>
-                        <a href="#"><img src="src/246x0w.webp"
-                                style="height: 60px ;width: 60px; border-radius: 5px; "></a>
+                        <a href="#"><img class="img" src="src/246x0w.webp"
+                                ></a>
                     </li>
                     <li>
                         <a class="nav-link" href="#">首页</a>
