--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                         <a class="nav-link" href="#">其他</a>
                     </li>
                     <li>
-                        <a class="nav-link" onclick="close_open()"
-                            style="width:auto;">上传</a>
+                        <a class="nav-link" onclick="close_open()" style="width:auto;">上传</a>
                     </li>
                 </ul>
 
@@ -49,7 +48,7 @@
             </div>
         </div>
     </div>
-    <div class="content" id="content" style="display: block;">
+    <div class="content animate" id="content" style="display: block;">
         <div class="container2">
             <div class="left bgshadow bg-br">
                 <div class="card ">
@@ -106,26 +105,45 @@
 
     </div>
     <div class="upload" id="upload" style="display: none;">
-        <span onclick=" document.getElementById('upload').style.display='none'" class=" close"
-            title="Close Modal">×</span>
-        <form class="modal-content animate"
+        <form class=" animate"
             onsubmit="event.preventDefault(); uploadFile(title.value, sourceUrl.value, desc.value, fileInput.files[0]);"
             method="post" enctype="multipart/form-data">
             <div class="container">
-                <div class="container">
-                    <label><b>标题</b></label>
-                    <input type="text" placeholder="Enter Title" name="title" required="">
-                    <label><b>源链接</b></label>
-                    <input type="text" placeholder="Enter Source URL" name="sourceUrl" required="">
-                    <label><b>描述</b></label>
-                    <textarea placeholder="Enter Description" name="desc" required=""></textarea>
-                    <label><b>上传文件</b></label>
+                <div class="upload_area">
                     <input type="file" name="file" required="" id="fileInput">
-                    <div class="clearfix">
-                        <button type="button" onclick="document.getElementById('id03').style.display='none'"
-                            class="cancelbtn">取消</button>
-                        <button type="submit" class="uploadbtn">上传</button>
+                    <label id="uploadArea">
+
+                        <svg class="svgup" viewBox="0 0 1024 1024" focusable="false" data-icon="inbox"
+                            fill="currentColor" aria-hidden="true">
+                            <path
+                                d="M885.2 446.3l-.2-.8-112.2-285.1c-5-16.1-19.9-27.2-36.8-27.2H281.2c-17 0-32.1 11.3-36.9 27.6L139.4 443l-.3.7-.2.8c-1.3 4.9-1.7 9.9-1 14.8-.1 1.6-.2 3.2-.2 4.8V830a60.9 60.9 0 0060.8 60.8h627.2c33.5 0 60.8-27.3 60.9-60.8V464.1c0-1.3 0-2.6-.1-3.7.4-4.9 0-9.6-1.3-14.1zm-295.8-43l-.3 15.7c-.8 44.9-31.8 75.1-77.1 75.1-22.1 0-41.1-7.1-54.8-20.6S436 441.2 435.6 419l-.3-15.7H229.5L309 210h399.2l81.7 193.3H589.4zm-375 76.8h157.3c24.3 57.1 76 90.8 140.4 90.8 33.7 0 65-9.4 90.3-27.2 22.2-15.6 39.5-37.4 50.7-63.6h156.5V814H214.4V480.1z">
+                            </path>
+                        </svg>
+
+                        <p class="p1">点击选择文件上传</p>
+
+
+                    </label>
+                </div>
+                <div class="detail">
+                    <div class="item1">
+                        <label><b>源名称</b></label>
+                        <input type="text" placeholder="Enter Title" name="title" required="">
                     </div>
+                    <div class="item1">
+                        <label><b>源链接</b></label>
+                        <input type="text" placeholder="Enter Source URL" name="sourceUrl" required="">
+                    </div>
+                    <div class="item2">
+                        <label><b>描述</b></label>
+                        <textarea placeholder="Enter Description" name="desc" required=""style='height: 100px;'></textarea>
+                    </div>
+                    
+                </div>
+                <div class="clearfix1">
+                    <button type="button" onclick="close_open()"
+                        class="cancelbtn">取消</button>
+                    <button type="submit" class="uploadbtn">上传</button>
                 </div>
             </div>
         </form>
@@ -168,7 +186,8 @@
                         <input type="text" placeholder="Enter Email" name="email" required>
                         <label><b>验证码</b></label>
                         <div style="display: flex; align-items: center;">
-                            <input class="btn_input" type="text" placeholder="验证码" id="captcha-btn" name="captcha" required
+                            <input class="btn_input" type="text" placeholder="验证码" id="captcha-btn" name="captcha"
+                                required
                                 style=" border-top-left-radius: 30px;border-bottom-left-radius: 30px;border-bottom-right-radius: 0px;border-top-right-radius: 0px;">
                             <button class="btn btn-outline-secondary" type="button" onclick="getCaptcha()"
                                 style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;border-top-right-radius: 30px;border-bottom-right-radius: 30px;">获取验证码</button>
