--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
             onsubmit="event.preventDefault(); uploadFile(title.value, sourceUrl.value, desc.value, fileInput.files[0]);"
             method="post" enctype="multipart/form-data">
             <div class="container">
-                <div class="upload_area">
+                <div class="upload_area"id="uploadArea">
                     <input type="file" name="file" required="" id="fileInput">
-                    <label id="uploadArea">
+                    <label >
 
                         <svg class="svgup" viewBox="0 0 1024 1024" focusable="false" data-icon="inbox"
                             fill="currentColor" aria-hidden="true">
