--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <input type="text" placeholder="Search...">
                 </div>
                 <div class="login">
-                    <button onclick="document.getElementById('sigin').style.display='block'"
+                    <button onclick="document.getElementById('sign').style.display='block'"
                         style="width:auto; ">注册</button>
 
                     <button onclick="document.getElementById('login').style.display='block'"
@@ -172,8 +172,8 @@
             </form>
         </div>
     </div>
-    <div id="sigin" class="box">
-        <span onclick="document.getElementById('sigin').style.display='none'" class="close"
+    <div id="sign" class="box">
+        <span onclick="document.getElementById('sign').style.display='none'" class="close"
             title="Close Modal">&times;</span>
         <div class="box_container">
             <form class="modal-content animate" onsubmit="event.preventDefault(); post_login(email.value, psw.value);"
@@ -201,7 +201,7 @@
                         <div class="other1">
                             <div><input type="checkbox" checked="checked"> Remember me</div>
                             <div class="clearfix"> <button type="button"
-                                    onclick="document.getElementById('sigin').style.display='none'" class="cancelbtn"
+                                    onclick="document.getElementById('sign').style.display='none'" class="cancelbtn"
                                     style="border-bottom-right-radius: 0px; border-top-right-radius: 0px;">
                                     取消
                                 </button>
