--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>源站</title>
+    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/bgvioletsky/long/src/246x0w.webp" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/bgvioletsky/long/css/index.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/bgvioletsky/long/js/main.js" defer></script>
     <script type="text/javascript" src="https://apps.bdimg.com/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -17,7 +18,7 @@
             <div class="navbar">
                 <ul class="navbar-nav">
                     <li>
-                        <a href="#"><img class="img" src="src/246x0w.webp"></a>
+                        <a href="#"><img class="img" src="https://cdn.jsdelivr.net/gh/bgvioletsky/long/src/246x0w.webp"></a>
                     </li>
                     <li>
                         <a class="nav-link" href="#">首页</a>
@@ -53,7 +54,7 @@
             <div class="left bgshadow bg-br">
                 <div class="card ">
                     <div class="card-img">
-                        <img class="avatar" src="src/246x0w.webp">
+                        <img class="avatar" src="https://cdn.jsdelivr.net/gh/bgvioletsky/long/src/246x0w.webp">
                     </div>
                 </div>
                 <div class=" card-body"">
